src/scss/main.scss
@charset 'UTF-8';
@import 'defaultSettings';
@import 'scrollTriggers';
@import 'mobile'; /*social icons*/
@mixin socialIconsli {
  li {
    display: flex;
    flex-direction: row;
    align-items: center;
    list-style: none;
    width: auto;
    height: auto;

    a {
      margin: 0 20px;
      background-size: contain;
      position: relative;

      &.behance {
        width: 20px;
        height: 20px;
        background: url("../images/behance.svg") no-repeat center;

        &:before {
          content: '';
          width: 20px;
          height: 20px;
          background: url("../images/behance.svg") no-repeat center;
          position: absolute;
          top: 0;
          left: 0;
          opacity: 0;
          @include transitions(all .2s linear);
        }

        &:hover {
          &:before {
            top: 5px;
            left: 5px;
            opacity: .5;
          }
        }
      }

      &.linkedin {
        width: 15px;
        height: 17px;
        background: url("../images/linkedin.svg") no-repeat center top;

        &:before {
          content: '';
          width: 15px;
          height: 17px;
          background: url("../images/linkedin.svg") no-repeat center top;
          position: absolute;
          top: 0;
          left: 0;
          opacity: 0;
          @include transitions(all .2s linear);
        }

        &:hover {
          &:before {
            top: 5px;
            left: 5px;
            opacity: .5;
          }
        }
      }

      &.twitter {
        width: 16px;
        height: 16px;
        background: url("../images/twitter.svg") no-repeat center;

        &:before {
          content: '';
          width: 16px;
          height: 16px;
          background: url("../images/twitter.svg") no-repeat center;
          position: absolute;
          top: 0;
          left: 0;
          opacity: 0;
          @include transitions(all .2s linear);
        }

        &:hover {
          &:before {
            top: 5px;
            left: 5px;
            opacity: .5;
          }
        }
      }

      &.github {
        width: 18px;
        height: 18px;
        background: url("../images/github.svg") no-repeat center;

        &:before {
          content: '';
          width: 18px;
          height: 18px;
          background: url("../images/github.svg") no-repeat center;
          position: absolute;
          top: 0;
          left: 0;
          opacity: 0;
          @include transitions(all .2s linear);
        }

        &:hover {
          &:before {
            top: 5px;
            left: 5px;
            opacity: .5;
          }
        }
      }
    }
  }
}
/*dialog box*/

.dialogBox {
  background: rgba(216, 206, 194, .5);
  display: flex;
  position: fixed;
  justify-content: center;
  align-items: center;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  text-align: center;
  z-index: 99999;
  visibility: hidden;
  pointer-events: none;
  opacity: 0;
  font-weight: 600;
  @include transitions (all .5s linear);

  span {
    padding: 30px;
    background: $inactiveButton;
    color: #fff;
    opacity: 1;
  }

  &.active {
    visibility: visible;
    opacity: 1;
  }
}
/*responsive nav*/

.menuContainer {
  @include topRightPos;
  background: $mNavBgColour;
  color: $inactiveNav;
  pointer-events: none;
  opacity: 0;
  width: 100%;
  height: 100%;
  @include transitions(all .3s ease-out);
  z-index: 100;

  ul {
    margin: 0;
    padding: 0;
    width: 100%;
    text-align: center;
    font-size: 1.8em;
    letter-spacing: .1em;
    font-weight: 600;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);

    li {
      display: block;
      text-transform: uppercase;
      padding: 20px 0;
      @include transitions(all .3s ease-out);

      img {
        width: 12%;
        padding-bottom: 30px;
        min-width: 72px;
      }

      a {
        display: inline !important; //bootstrap override
        padding: 0 !important; //bootstrap override

        &.active {
          position: relative;
          //font-weight: 600;
          color: $defaultTextColour !important;

          &:after {
            position: absolute;
            width: 100%;
            left: 0;
            top: 100%;
            content: " ";
            display: block;
            border-top: 5px solid $light;
            border-right: 5px solid transparent;
          }
        }
      }

      &.left {
        transform: translateX(-10px);
      }

      &.right {
        transform: translateX(10px);
      }

      &.copy {
        padding-top: 30px;
        @include defaultFont;
        @include defaultFontSize;
        text-transform: none;
      }
    }
  }
}

.checkboxToggle {
  @include topRightPos;
  z-index: 102;
  cursor: pointer;
  width: $mNavToggleW;
  height: $mNavToggleH;
  border: 0;
  padding: 0;
  opacity: 0;

  &:checked {
    &+.checkboxLabel {
      span.outer {
        opacity: 0;

        &:before {
          @extend span.outer;
        }

        &:after {
          @extend span.outer;
        }
      }

      span.middle {
        //overlaid visible middle rectangle
        transform: rotate(45deg);
      }

      span.middle2 {
        transform: rotate(-45deg);
      }
    }

    &~.menuContainer {
      pointer-events: auto;
      opacity: .95;

      ul {
        li {
          transform: translateX(0);
        }
      }
    }
  }
}
/* ... */

